--- a/Android-App/Main.axml
+++ b/Android-App/Main.axml
@@ -1,5 +1,11 @@
 //code for setting the physical buttons and appearance of screen
-//added "spinner" to only allow desired units
+//Added a unit Spinner to only allow desired units.
+//Added a text view above the spinner (just makes it look nicer).
+//Added the auto-complete text-box to hekp users.
+//Changed the background color of the text boxes to stand out for user-visibility.
+//Changed the size of the text-views to small instead of large (looks nicer and takes less space).
+//Changed some margins to look nicer.
+
 
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,35 +16,45 @@
     android:minHeight="25px">
     <TextView
         android:text="Enter the Amount:"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textAmount" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#4c4c4c"
         android:id="@+id/enterAmount"
-        android:layout_marginBottom="11.0dp" />
+        android:layout_marginBottom="9.0dp" />
+    <TextView
+        android:text="Enter the unit:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textUnit" />
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="38.0dp"
         android:id="@+id/unitSpinner"
-        android:layout_marginBottom="11.0dp"
-        android:layout_marginTop="6.5dp"
+        android:layout_marginBottom="9.0dp"
+        android:background="#4c4c4c"
+        android:popupBackground="#4c4c4c"
         android:tag="Unit" />
     <TextView
         android:text="Enter Ingredient:"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textIngred" />
     <AutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/autoCompIngred" />
+        android:background="#4c4c4c"
+        android:id="@+id/autoCompIngred"
+        android:layout_marginBottom="9.0dp"/>
     <Button
         android:text="Search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/search" />
-</LinearLayout>
+</LinearLayout
