--- a/Android-App/RecipeLayout.axml
+++ b/Android-App/RecipeLayout.axml
@@ -2,78 +2,85 @@
 // **2 extra buttons: --one to let it know you are done adding ingredients which opens up the name and submit options
 //-------------------- one that submits the recipe, name and all, then loads the list activity
 //** an extra text field to enter a recipe name
+//added a nice green color to text, buttons etc on a nice grey background
 
 
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-  <TextView
-      android:text="Enter the Amount:"
-      android:textAppearance="?android:attr/textAppearanceSmall"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/textAmount" />
-  <EditText
-      android:layout_width="match_parent"
-      android:layout_height="30.0dp"
-      android:background="#4c4c4c"
-      android:id="@+id/enterAmount"
-      android:layout_marginBottom="9.0dp" />
-  <TextView
-      android:text="Enter the unit:"
-      android:textAppearance="?android:attr/textAppearanceSmall"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/textUnit" />
-  <Spinner
-      android:layout_width="match_parent"
-      android:layout_height="35.0dp"
-      android:id="@+id/unitSpinner"
-      android:layout_marginBottom="9.0dp"
-      android:background="#4c4c4c"
-      android:popupBackground="#4c4c4c"
-      android:tag="Unit" />
-  <TextView
-      android:text="Enter Ingredient:"
-      android:textAppearance="?android:attr/textAppearanceSmall"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/textIngred" />
-  <AutoCompleteTextView
-      android:layout_width="match_parent"
-      android:layout_height="30.0dp"
-      android:background="#4c4c4c"
-      android:id="@+id/autoCompIngred"
-      android:layout_marginBottom="9.0dp"/>
-  <Button
-      android:text="Add Ingredient to Recipe"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/addIngred" />
-  <Button
-      android:text="Done Adding Ingredients"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/finalize" />
-  <TextView
-     android:text="Recipe Name:"
-     android:textAppearance="?android:attr/textAppearanceSmall"
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:id="@+id/recipeName" />
-  <EditText
-     android:layout_width="match_parent"
-     android:layout_height="30.0dp"
-     android:background="#4c4c4c"
-     android:id="@+id/enterName"
-     android:layout_marginBottom="9.0dp" />
-  <Button
-      android:text="Let's see it!"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/submit" />
-  
-  
+    android:layout_height="match_parent"
+    android:background="#607d8b">
+    <TextView
+        android:text="Enter the Amount:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#0bd27d"
+        android:id="@+id/textAmount" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="30.0dp"
+        android:background="#4c4c4c"
+        android:id="@+id/enterAmount"
+        android:layout_marginBottom="9.0dp" />
+    <TextView
+        android:text="Enter the unit:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#0bd27d"
+        android:id="@+id/textUnit" />
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="35.0dp"
+        android:id="@+id/unitSpinner"
+        android:layout_marginBottom="9.0dp"
+        android:background="#0bd27d"
+        android:popupBackground="#0d7845"
+        android:tag="Unit" />
+    <TextView
+        android:text="Enter Ingredient:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#0bd27d"
+        android:id="@+id/textIngred" />
+    <AutoCompleteTextView
+        android:layout_width="match_parent"
+        android:layout_height="30.0dp"
+        android:background="#4c4c4c"
+        android:id="@+id/autoCompIngred"
+        android:layout_marginBottom="9.0dp" />
+    <Button
+        android:text="Add Ingredient to Recipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#16b460"
+        android:id="@+id/addIngred" />
+    <Button
+        android:text="Done Adding Ingredients"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#16b460"
+        android:id="@+id/finalize" />
+    <TextView
+        android:text="Recipe Name:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#0bd27d"
+        android:id="@+id/recipeName" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="30.0dp"
+        android:background="#4c4c4c"
+        android:id="@+id/enterName"
+        android:layout_marginBottom="9.0dp" />
+    <Button
+        android:text="Let's see it!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#16b460"
+        android:id="@+id/submit" />
 </LinearLayout>
